Fix some redundant paddings in forms and unwanted horizontal scrollbar

--- a/skins/elastic/styles/widgets/forms.less
+++ b/skins/elastic/styles/widgets/forms.less
@@ -48,9 +48,16 @@ html.ms .propform {
 .formcontent {
     padding: 1em;
 
-    td.row {
+    .row {
         margin-right: 0; /* without these the form is too wide causing horizontal scrollbar appearence */
         margin-left: 0;
+
+        .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9,
+        .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9 {
+            /* overwrite Bootstrap's redundant padding */
+            padding-right: 0;
+            padding-left: 0;
+        }
     }
 
     .row.form-check {
